--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -18,4 +18,5 @@ jobs:
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
+      - run: npm install -g npm@latest
       - run: npm publish --access public
