Update from https://github.com/undp/design-system/commit/cf7be03d86dd0ec3631289d45977cba490151d55

--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name": "@undp/design-system-assets", "version": "1.4.9"}
+{"name": "@undp/design-system-assets", "version": "1.4.9", "repository": {"type": "git","url": "https://github.com/undp/design-system-assets.git"}}
